# begroing-index

./: .gitignore  .pycodestyle  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: default.yml
begroing_index/: indicator_values.py
begroing_index/indicator_values/: indicator_values_PIT.csv
indicator_values/: indicator_values_AIP.csv  indicator_values_AIP.tsv  indicator_values_PIT.csv  indicator_values_PIT.tsv
niva_index/begroing/: aip.py  pit.py
tests/: test_begroing_aip.py  test_begroing_pit.py  test_indicator_values.py
