[tool.poetry]
name = "begroing_index"
version = "0.2.0"
description = ""
authors = ["Håkon Drolsum Røkenes <hakon.drolsum.rokenes@niva.no>"]
include = ["indicator_values/**/*.csv"]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
mypy = "^0.812"
pycodestyle = "^2.6.0"
black = "22.6.0"


[build-system]
requires = ["poetry-core>=1.1.15"]
build-backend = "poetry.core.masonry.api"
